# doodle

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/: README.md
crates/bloom/: Cargo.toml
crates/bloom/src/: lib.rs
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: lib.rs
crates/commons/: Cargo.toml
crates/commons/src/: lib.rs
crates/file-store/: Cargo.toml
crates/file-store/src/: const_serializable.rs  iterable.rs  lib.rs  peekable.rs  random_lookup.rs  temp.rs
crates/kuchiki/src/: xpath.rs
crates/leechy/: Cargo.toml
crates/leechy-py/: Cargo.toml
crates/leechy-py/src/: lib.rs
crates/leechy/src/: conf.toml  engine.rs  lib.rs  useragent.rs
crates/lending-iter/: Cargo.toml
crates/lending-iter/src/: lib.rs
crates/lending-iter/src/adapters/: cloned.rs  enumerate.rs  filter.rs  flatten.rs  map.rs  mod.rs
crates/optics/: Cargo.toml  build.rs
crates/optics/src/: ast.rs  lexer.rs  lib.rs
crates/ownedbytes/: Cargo.toml
crates/ownedbytes/src/: lib.rs
crates/robots-policy/: Cargo.toml
crates/robots-policy/src/: lib.rs  parser.rs  pattern.rs
crates/tantivy/: AUTHORS
crates/web-spell/: Cargo.toml
crates/web-spell/src/: config.rs  error_model.rs  lib.rs  spell_checker.rs  stupid_backoff.rs  term_freqs.rs  trainer.rs
crates/zimba/: Cargo.toml
crates/zimba/src/: lib.rs  lib_test.rs  wiki.rs
