[package]
edition = "2021"
name = "leechypy"
version = "0.1.0+py"

[lib]
crate-type = ["cdylib"]
name = "leechypy"

[dependencies]
leechy = { path = "../leechy" }
pyo3 = { version = "0.22.0", features = [
    "extension-module",
    "experimental-async",
] }
tokio = { version = "1.23.1", features = ["full"] }
