[package]
name = "web-spell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
fst.workspace = true
itertools.workspace = true
indicatif.workspace = true
rayon.workspace = true
uuid.workspace = true
tracing.workspace = true
memmap2.workspace = true
whatlang.workspace = true
fnv.workspace = true

[dev-dependencies]
file-store.workspace = true
proptest.workspace = true
